Sync Russian docs

--- a/manual/ru/max/Camera.html
+++ b/manual/ru/max/Camera.html
@@ -39,22 +39,29 @@
     <h2>Camera Settings</h2>
 
     <p>
-      Each camera in 3ds Max is assigned with Verge3D settings:
+      Each camera in 3ds Max is assigned with the following Verge3D settings:
     </p>
 
-    <img src="files/camera-max/camera-settings.jpg" alt="Camera settings in Verge3D for 3ds Max" class="centered" style="max-width: 351px">
+    <img src="files/camera-max/camera-settings.jpg" alt="Camera settings in Verge3D for 3ds Max" class="centered" style="max-width: 329px">
 
     <p>*Allow Panning* - allow camera panning.</p>
-    <p>*Rotate Speed* - camera rotation speed factor.</p>
-    <p>*Move Speed* - camera movevent speed factor.</p>
-    <p>*Pivot Distance Limits* - distance limits for Orbit camera.</p>
-    <p>*Vertical Angle Limits* - vertical angle limits for Orbit camera.</p>
-    <p>*Horizontal Angle Limits* - horizontal angle limits for Orbit camera.</p>
+    <p>*Rot. Speed* - camera rotation speed factor.</p>
+    <p>*Mov. Speed* - camera movevent speed factor.</p>
+    <p>*Disable Controls* - disable any controls. Specify if you're going to move your camera with animations, Puzzles or JavaScript.</p>
 
+
+    [anchor:orbit_settings]
+
+    <h3>Orbit Camera Settings</h3>
+
+    <p>*Persp Min Dist* and *Persp Max Dist* - distance limits for perspective camera.</p>
+    <p>*Ortho Min Zoom* and *Ortho Max Zoom* - zoom limits for orthographic camera.</p>
+    <p>*Min Vertical Angle* and *Max Vertical Angle* - vertical (up-down) angle limits.</p>
+    <p>*Min Horizon Angle* and *Max Horizon Angle* - horizontal (left-right) angle limits.</p>
 
     [anchor:firstperson_settings]
 
-    <h3>First-person camera settings</h3>
+    <h3>First-Person Camera Settings</h3>
 
     <p>*Enabled* - enable first-person camera.</p>
 
@@ -63,6 +70,7 @@
     <p>*Gaze Level* - first-person camera "gaze" (or "head"/"eyes") level.</p>
 
     <p>*Story Height* - story height.</p>
+
 
 
     [anchor:camera_control_with_puzzles]
