--- a/manual/ru/max/Transparency.html
+++ b/manual/ru/max/Transparency.html
@@ -25,7 +25,7 @@
     <h2>Blended vs Masked</h2>
 
     <p>
-    Being a real-time 3D engine, Verge3D offers two main methods to handle transparent objects: alpha blending and alpha clipping (usually with an image mask). Blending enables combining a translucent foreground color with a background color, using the foreground color's alpha as blending factor. Clipping, on the other hand, simply discards all pixels with alpha less than some predefined threshold (usually 0.5).
+    Being a real-time 3D engine, Verge3D offers two main methods to handle transparent objects: alpha blending and alpha clipping (usually with an image mask). Blending enables combining a translucent foreground color with a background color, using the foreground color's alpha as blending factor. Clipping, on the other hand, simply discards all pixels with alpha less than some predefined threshold (always equal to 0.5 in Verge3D for 3ds Max).
     </p>
 
     <img src="files/transparency-common/blending-vs-clipping.jpg">
@@ -68,7 +68,7 @@
     <p>Parameters:</p>
 
     <ul>
-      <li>*Transparency* — transperency amount, color and roughness. The color and roughness parameters supported only for refraction-based transparency (*thin-walled* off).</li>
+      <li>*Transparency* — transparency amount, color and roughness. The color and roughness parameters supported only for refraction-based transparency (*thin-walled* off).</li>
       <li>*Thin-walled* — use generic (*thin-walled* on) or refraction-based (*thin-walled* off) transparency.</li>
       <li>*Alpha Mode* — material transparency mode.</li>
       <li>*Depth Write* — disable for additive transparency composing (see <a href="manual/ru/max/Transparency.html#alpha_add">above</a>).</li>
