--- a/manual/ru/maya/Blend-Shapes.html
+++ b/manual/ru/maya/Blend-Shapes.html
@@ -31,7 +31,15 @@
     <h2>Setting Up</h2>
 
     <p>
-      In Maya, open the <a href="https://knowledge.autodesk.com/support/maya/learn-explore/caas/CloudHelp/cloudhelp/2020/ENU/Maya-CharacterAnimation/files/GUID-3C92402C-B24E-4874-AC8D-EADF976A19DC-htm.html" target="_blank">Shape Editor</a>, and setup targets for your objects. Please notice that due to hardware constraints, you can create only one blend shape with total number of active targets limited to 6. During rendering, the engine selects 6 shape targets with largest influences ignoring all excessive targets.
+        In Maya, open the <a href="https://knowledge.autodesk.com/support/maya/learn-explore/caas/CloudHelp/cloudhelp/2020/ENU/Maya-CharacterAnimation/files/GUID-3C92402C-B24E-4874-AC8D-EADF976A19DC-htm.html" target="_blank">Shape Editor</a>,
+        and setup targets for your objects. Please notice that due to hardware
+        constraints, you can create only one blend shape with a limited amount
+        of active targets. Most of the time it's 5 targets for skinned objects
+        and 6 for others. See <a href="manual/ru/introduction/Hardware-Related-Issues.html#too_many_attributes">this topic</a>
+        for more information about calculating the limit in more complex cases.<br/><br/>
+
+        During rendering, the engine selects 6 shape targets with largest
+        influences ignoring all excessive targets.
     </p>
 
     <img src="files/blend-shapes-maya/blend-shape-editor.jpg" alt="Morphing in Verge3D for Maya" class="centered" style="max-width: 660px">
