--- a/manual/ru/maya/Camera.html
+++ b/manual/ru/maya/Camera.html
@@ -46,7 +46,7 @@
       Each camera in Maya is assigned with Verge3D settings:
     </p>
 
-    <img src="files/camera-maya/camera-settings.jpg" alt="Camera settings in Verge3D for Maya" class="centered" style="max-width: 458px">
+    <img src="files/camera-maya/camera-settings.jpg" alt="Camera settings in Verge3D for Maya" class="centered" style="max-width: 405px">
 
     <p>
       *Controls* - specify what type of controls will be assigned to the camera in Verge3D:
@@ -60,13 +60,16 @@
     </ul>
 
     <p>
-      *Rotate Speed* - camera rotation speed factor.
+      *Rotation Speed* - camera rotation speed factor.
     </p>
     <p>
-      *Move Speed* - camera movevent speed factor.
+      *Movement Speed* - camera movevent speed factor.
     </p>
     <p>
-      *Pivot Distance Limits* - distance limits for Orbit camera.
+      *Perspective Distance Limits* - distance limits for perspective Orbit camera.
+    </p>
+    <p>
+      *Orthographic Zoom Limits* - zoom limits for othographic Orbit camera.
     </p>
     <p>
       *Vertical Angle Limits* - vertical angle limits for Orbit camera.
@@ -75,8 +78,20 @@
       *Horizontal Angle Limits* - horizontal angle limits for Orbit camera.
     </p>
 
+
+    <h3>First-Person Settings</h3>
+
+    <p>*Collision Material* - collision material which will be used for the first-person camera.</p>
+
+    <p>*Gaze Level* - first-person camera "gaze" (or "head"/"eyes") level.</p>
+
+    <p>*Story Height* - first-person camera story height.</p>
+
+
+    <h3>Rendering Settings</h3>
+
     <p>
-      *Render Background* - enable to configure background color in Verge3D. See more information about this feature <a href="manual/ru/maya/Lighting-and-Rendering.html#Background">here</a>.
+      *Render Background* - enable to configure background color in Verge3D. See more information about this feature <a href="manual/ru/maya/Lighting-and-Rendering.html#background">here</a>.
     </p>
 
 
