--- a/manual/ru/puzzles/Advanced.html
+++ b/manual/ru/puzzles/Advanced.html
@@ -27,9 +27,47 @@
     <h2>Puzzles Reference</h2>
 
 
-    [anchor:call_JS_function]
+    [anchor:exec_script]
 
-    <h3>call JS function</h3>
+    <h3>exec script</h3>
+
+    <p>
+        This puzzle executes the specified javascript code. The puzzle uses
+        <a href='https://ace.c9.io/'>Ace Editor</a> for displaying and editing
+        the content. See the relevant keyboard shortcuts here:
+        <a href='https://github.com/ajaxorg/ace/wiki/Default-Keyboard-Shortcuts'>Default Keyboard Shortcuts</a>.
+    </p>
+
+    <p>You can use the following built-in variables:</p>
+    <ul>
+        <li><b>app</b> - the application instance, see <a href="api/en/extras/App.html">App</a> for more details</li>
+        <li><b>v3d</b> - the v3d namespace which contains all the engine modules</li>
+        <li><b>VARS</b> - variable puzzles can be accessed through this object</li>
+        <li><b>PROC</b> - procedure puzzles can be accessed through this object</li>
+    </ul>
+
+    <img src="files/puzzles/puzzles-advanced-exec-script.jpg" style="max-width: 1000px">
+
+    <p><b>Specifics of using built-ins regarding to "Init" and other tabs</b></p>
+    <ul>
+        <li>
+            The <b>app</b> built-in variable is not available for this puzzle if
+            it's used inside the <b>Init</b> tab, since at that stage the
+            application is not properly initialized yet.
+        </li>
+        <li>
+            Variables and procedures declared in the <b>Init</b> tab can not be
+            accessed from other tabs via <b>VARS</b> and <b>PROC</b> and vice
+            versa.
+        </li>
+    </ul>
+
+
+    <!-- COMPAT: < 3.5 -->
+    <a href="#" id="call_JS_function"></a>
+    [anchor:call_external_function]
+
+    <h3>call external function</h3>
 
     <p>
     Executes a function specified in the JavaScript code of the application. Optionally passes parameters to be used as function arguments.
@@ -48,7 +86,6 @@ function prepareExternalInterface(app) {
         }
 }
     </code>
-
 
 
     [anchor:load_data]
@@ -94,7 +131,7 @@ function prepareExternalInterface(app) {
     <h3>read JSON</h3>
 
     <p>
-    Interprets text as <a href="https://en.wikipedia.org/wiki/JSON#Example" target="_blank">JavaScript Object Notation</a> data which are returned in a dictionary.
+      Interprets text (or <a href="manual/ru/puzzles/HTML.html#data_uri">Data URI</a>) as <a href="https://en.wikipedia.org/wiki/JSON#Example" target="_blank">JavaScript Object Notation</a> data which is returned in a dictionary.
     </p>
 
     <img src="files/puzzles/puzzles-advanced-read-JSON.jpg">
@@ -106,13 +143,13 @@ function prepareExternalInterface(app) {
     <h3>read CSV</h3>
 
     <p>
-    Interprets text as <a href="https://en.wikipedia.org/wiki/Comma-separated_values#Example" target="_blank">comma-separated values</a>. Returns a list of table rows, with each row represented as a list of values. The delimiter can be selected with the drop-down to correspond a CSV file's export settings. "From row" value denotes how many rows will be skipped starting from the top.
+      Interprets text (or <a href="manual/ru/puzzles/HTML.html#data_uri">Data URI</a>) as <a href="https://en.wikipedia.org/wiki/Comma-separated_values#Example" target="_blank">comma-separated values</a>. Returns a list of table rows, with each row represented as a list of values. The delimiter can be selected with the drop-down to correspond a CSV file's export settings. "From row" value denotes how many rows will be skipped starting from the top.
     </p>
 
     <img src="files/puzzles/puzzles-advanced-read-CSV.jpg">
 
     <p>
-    Table rows and values are accessed by their numeric indices starting from 0.
+      Table rows and values are accessed by their numeric indices starting from 0.
     </p>
 
     <img src="files/puzzles/puzzles-advanced-csv-example.jpg">
@@ -174,6 +211,42 @@ function prepareExternalInterface(app) {
     <img src="files/puzzles/puzzles-advanced-variable-value-by-name.jpg">
 
 
+    [anchor:javascript_object]
+
+    <h3>JavaScript object</h3>
+
+    <p>
+      Returns a given JavaScript object.
+    </p>
+
+    <img src="files/puzzles/puzzles-advanced-javascript-object.jpg">
+
+    <p>You can get the following JavaScript objects with this puzzle:</p>
+
+    <dl>
+      <dt>window</dt>
+      <dd>Return the top-level *window* object as dictionary value.</dd>
+      <dt>arguments</dt>
+      <dd>Returns the list of arguments of the currently executed function. Can be used to get arguments of Puzzles procedures or additional arguments passed to internal Puzzles callbacks (see below).</dd>
+      <dt>this</dt>
+      <dd>JavaScript *this* value.</dd>
+    </dl>
+
+    <p>The *arguments* option can be used to retrieve additional puzzles options. For example, when using <a href="manual/ru/puzzles/Events.html#when_clicked">when clicked</a> puzzle, you can get the internal JavaScript event which triggers the puzzle logic using the first argument of the callback executed behind the *do* slot. In the example below we use this event to get X and Y coordinates of the mouse pointer:</p>
+
+    <img src="files/puzzles/puzzles-advanced-javascript-object-example.jpg">
+
+    <p>The following puzzles support advanced options:</p>
+
+    <ul>
+      <li><a href="manual/ru/puzzles/Events.html#when_clicked">when clicked</a>, <a href="manual/ru/puzzles/Events.html#when_hovered">when hovered</a>, <a href="manual/ru/puzzles/Events.html#when_dragged">when dragged</a> — <a href="https://developer.mozilla.org/en-US/docs/Web/API/MouseEvent" target="_blank">mouse</a> or <a href="https://developer.mozilla.org/en-US/docs/Web/API/TouchEvent">touch</a> event which triggers puzzles in the <em>do</em> slots.</li>
+      <li><a href="manual/ru/puzzles/Time.html#after">after</a>, <a href="manual/ru/puzzles/Time.html#set_timer">set timer</a> — timer ID returned by the puzzles' <a href="https://www.w3schools.com/jsref/met_win_setinterval.asp">setInterval()</a> call.</li>
+      <li><a href="manual/ru/puzzles/Time.html#every_frame">every frame</a> — delta time and total elapsed time.</li>
+      <li><a href="manual/ru/puzzles/HTML.html#event">event</a> — event object.</li>
+      <li><a href="manual/ru/puzzles/AR_VR.html#session_event">on session event</a> — WebXR event object.</li>
+    </ul>
+
+
     [anchor:wait_promise]
 
     <h3>wait promise</h3>
@@ -192,6 +265,22 @@ function prepareExternalInterface(app) {
     <h3>promise value</h3>
 
     <p>Resolved promise value (in case of resolved promise) or error string (in case of rejected promise).</p>
+
+
+    [anchor:connector]
+
+    <h3>connector</h3>
+
+    <p>
+        This puzzle facilitates connecting other puzzles with each other, to
+        make it more convenient to move, delete and use them in other puzzles.
+        The most notable application is to join <a href="manual/ru/puzzles/Sound.html#load_sound">load sound</a>
+        or <a href="manual/ru/puzzles/Sound.html#load_video">load video</a>
+        puzzles into a single group to organize preloading of media resources
+        in your application.
+    </p>
+
+    <img src="files/puzzles/puzzles-advanced-connector.jpg">
 
 
     <h2>Having Troubles with Puzzles?</h2>
