--- a/manual/ru/puzzles/Animation.html
+++ b/manual/ru/puzzles/Animation.html
@@ -10,10 +10,10 @@
   </head>
   <body><article>
 
-    <h1>Animation Puzzles</h1>
+    <h1>Animation and Constraint Puzzles</h1>
 
     <p>
-    The puzzles from this category perform operations with animation clips.
+      The puzzles from this category are used to perform operations with animation clips, do procedural animations, as well as restrict the movement of the objects.
     </p>
 
     <img src="files/puzzles/puzzles-animation.jpg">
@@ -26,7 +26,7 @@
 
     [anchor:puzzles_reference]
 
-    <h2>Puzzles Reference</h2>
+    <h2>Animation Puzzles Reference</h2>
 
     [anchor:play_animation]
 
@@ -98,17 +98,13 @@
     <img src="files/puzzles/puzzles-animation-set-animation-frame.jpg">
 
 
+    [anchor:get_animation_frame]
 
-    [anchor:clone_animation]
+    <h3>get animation frame</h3>
 
-    <h3>clone animation</h3>
+    <p>Get current frame of an animation clip.</p>
 
-    <p>
-    Clones an animation clip (or a list of animations) in the specified range.
-    </p>
-
-    <img src="files/puzzles/puzzles-animation-clone-animation.jpg">
-
+    <img src="files/puzzles/puzzles-animation-get-animation-frame.jpg">
 
 
     [anchor:is_animation_playing]
@@ -122,7 +118,6 @@
     <img src="files/puzzles/puzzles-animation-is-playing.jpg">
 
 
-
     [anchor:get_animation]
 
     <h3>get animation</h3>
@@ -132,6 +127,18 @@
     </p>
 
     <img src="files/puzzles/puzzles-animation-get-animation.jpg">
+
+
+    [anchor:clone_animation]
+
+    <h3>clone animation</h3>
+
+    <p>
+    Clones an animation clip (or a list of animations) in the specified range.
+    </p>
+
+    <img src="files/puzzles/puzzles-animation-clone-animation.jpg">
+
 
 
 
@@ -178,6 +185,54 @@
     <p>
     This puzzle may be placed anywhere in a scenario, but naturally works in the *on update do* slot of the <a href="manual/ru/puzzles/Animation.html#animate_param">animate param</a> puzzle where it is updated every frame.
     </p>
+
+
+    [anchor:constraints_puzzles_reference]
+
+    <h2>Constraints Puzzles Reference</h2>
+
+    <p>
+    If an object is not parented to another object, the constraints will work in world space. Otherwise they will work in the parent object's space - you can select the parent object in Blender, 3ds Max, or Maya to show up the coordinate axes.
+    </p>
+
+
+    [anchor:limit_transform]
+
+    <h3>limit transform</h3>
+
+    <p>
+    Creates a constraint to limit object position, rotation or scale along a selected axis. Constraint *id* should be unique, otherwise an existing constraint with the same id will be replaced. The *min* and *max* slots specify the range between which the movement is allowed.
+    </p>
+
+    <img src="files/puzzles/puzzles-constraints-limit-transform.jpg">
+
+
+
+    [anchor:copy_transform]
+
+    <h3>copy transform</h3>
+
+    <p>
+    Creates a constraint to copy object position, rotation or scale from another object. Constraint *id* should be unique, otherwise an existing constraint with the same id will be replaced.
+    </p>
+
+    <img src="files/puzzles/puzzles-constraints-copy-transform.jpg">
+
+
+
+    <!--for compatibility-->
+    <p><a href="manual/ru/puzzles/Physics.html#operations" id="operations" class="permalink"></a></p>
+
+    [anchor:remove_mute_unmute_constraint]
+
+    <h3>remove / mute / unmute constraint</h3>
+
+    <p>
+    Removes, mutes or unmutes a constraint assigned to a specified object. Other constraints assigned to this object (if any) will remain intact.
+    </p>
+
+    <img src="files/puzzles/puzzles-constraints-remove-mute-unmute-constraint.jpg">
+
 
 
     <h2>Having Troubles with Puzzles?</h2>
