--- a/manual/ru/puzzles/ECommerce.html
+++ b/manual/ru/puzzles/ECommerce.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <title>E-Commerce Puzzles Reference - Soft8Soft</title>
+    <title>E-Commerce Plugin Reference - Soft8Soft</title>
     <meta charset="utf-8">
-    <meta name="description" content="These puzzles are used for implementing WooCommerce product 3D views and configurators, as well as for creating standalone order/inquiry forms."/>
+    <meta name="description" content="Puzzles from this plugin are used for implementing WooCommerce product 3D views and configurators, as well as for creating standalone order/inquiry forms."/>
     <base href="../../../" />
     <script src="page.js"></script>
     <link type="text/css" rel="stylesheet" href="page.css" />
   </head>
   <body><article>
 
-    <h1>E-Commerce Puzzles</h1>
+    <h1>E-Commerce Plugin</h1>
 
     <p>
-    These puzzles are used for implementing WooCommerce 3D product views and configurators, as well as for creating standalone order/inquiry forms.
+        This stock <a href="manual/ru/puzzles/Plugins.html">plugin</a> adds
+        puzzles that can be used for implementing WooCommerce 3D product views
+        and configurators, as well as for creating standalone order/inquiry forms.
     </p>
 
     <img src="files/puzzles/puzzles-ecommerce.jpg">
