--- a/manual/ru/puzzles/Events.html
+++ b/manual/ru/puzzles/Events.html
@@ -37,7 +37,18 @@
 
     <img src="files/puzzles/puzzles-events-when-clicked.jpg">
 
+    <p>*advanced event options* checker in the gear popup activates the following properties:<p>
 
+    <dl>
+      <dt>x-ray</dt>
+      <dd>Allow clicking the object behind any unclickable objects. Useful for clicking objects located behind semi-transparent surfaces or objects rendered above all (decalls or x-rayed geometries).<dd>
+
+      <dt>double click / tap</dt>
+      <dd>Execute puzzles in response to double click (desktops) or double tap events (mobiles).<dd>
+
+      <dt>mouse buttons</dt>
+      <dd>Execute puzzles only for the specified mouse buttons: left, middle, or right.<dd>
+    </dl>
 
     [anchor:picked_object]
 
@@ -61,6 +72,12 @@
 
     <img src="files/puzzles/puzzles-events-when-hovered.jpg">
 
+    <p>*advanced event options* checker in the gear popup activates the following property:<p>
+
+    <dl>
+      <dt>x-ray</dt>
+      <dd>Allow hovering behind other objects. Useful for outlining objects located behind semi-transparent surfaces or objects rendered above all (decalls or x-rayed geometries).<dd>
+    </dl>
 
 
     [anchor:hovered_object]
@@ -97,6 +114,16 @@
 
     <img src="files/puzzles/puzzles-events-when-dragged-over.jpg">
 
+
+    <p>*advanced event options* checker in the gear popup activates the following property:<p>
+
+    <dl>
+      <dt>x-ray</dt>
+      <dd>Allow dragging the object behind other objects. Useful for dragging objects located behind semi-transparent surfaces or objects rendered above all (decalls or x-rayed geometries).<dd>
+
+      <dt>mouse buttons</dt>
+      <dd>Drag only with the specified mouse buttons: left, middle, or right.<dd>
+    </dl>
 
 
     [anchor:drag_move]
