--- a/manual/ru/puzzles/Lists.html
+++ b/manual/ru/puzzles/Lists.html
@@ -204,6 +204,16 @@
     <img src="files/puzzles/puzzles-lists-find-example.jpg" style="max-width: 1000px">
 
 
+    [anchor:check_item]
+
+    <h3>check item</h3>
+
+    <p>
+    This puzzle can be used to check whether an item is contained in a list. If the item was found, it returns boolean value <em>true</em> . If the item was not found, the puzzle returns <em>false</em>.
+    </p>
+
+    <img src="files/puzzles/puzzles-lists-check-item.jpg">
+
 
     [anchor:get_sub_list]
 
