--- a/manual/ru/puzzles/Text.html
+++ b/manual/ru/puzzles/Text.html
@@ -57,6 +57,25 @@
     <img src="files/puzzles/puzzles-text-text-example3.jpg" style="max-width: 1000px">
 
 
+    [anchor:text_multiline]
+
+    <h3>text multi-line</h3>
+
+    <p>
+        This puzzle provides the means to supply some text to your Puzzles
+        scenario. The puzzle uses <a href='https://ace.c9.io/'>Ace Editor</a>
+        for displaying and editing the content. See the relevant keyboard
+        shortcuts here: <a href='https://github.com/ajaxorg/ace/wiki/Default-Keyboard-Shortcuts'>Default Keyboard Shortcuts</a>.
+    </p>
+
+    <p>
+        The puzzle supports CSS, HTML, Javascript and plain text highlighting
+        modes, which can be switched on the fly.
+    </p>
+
+    <img src="files/puzzles/puzzles-text-text-multiline.jpg" style="max-width: 1000px">
+
+
     [anchor:create_text]
 
     <h3>create text</h3>
