--- a/manual/ru/max/Installation.html
+++ b/manual/ru/max/Installation.html
@@ -21,11 +21,11 @@
     <h3>3ds Max</h3>
 
     <p>
-    Verge3D works on top of Autodesk 3ds Max 2018-2021 which should be installed first. If this is not the case, you can download a free trial bundle from Autodesk's <a href="https://www.autodesk.com/products/3ds-max/free-trial" target="_blank">website</a>, or try Verge3D for Blender instead.
+    Verge3D works on top of Autodesk 3ds Max 2019-2022 which should be installed first. If this is not the case, you can download a free trial bundle from Autodesk's <a href="https://www.autodesk.com/products/3ds-max/free-trial" target="_blank">website</a>, or try Verge3D for Blender instead.
     </p>
 
     <p>
-    We recommend using the latest version of 3ds Max (2021 at the time of writing) for best results.
+    We recommend using the latest version of 3ds Max (2022 at the time of writing) for best results.
     </p>
 
     <h3>Operating system</h3>
@@ -50,19 +50,7 @@
     <a href="https://www.soft8soft.com/get-verge3d/" target="_blank">Download</a> the Verge3D bundle and double click on the <strong>.exe</strong> file to run the installer.
     </p>
 
-    <img src="files/installation_3ds_max/installer-max-starting.jpg" class="centered" style="max-width: 499px">
-
-    <p>
-    There is a known issue on Win 10 when Windows Defender may refuse to run the installer (we are working on it). If you see a blue warning window like on the picture below, click the *More info* link:
-    </p>
-
-    <img src="files/installation_3ds_max/installer-max-windows-defender-issue1.jpg" class="centered" style="max-width: 920px">
-
-    <p>
-    and then press the *Run anyway* button:
-    </p>
-
-    <img src="files/installation_3ds_max/installer-max-windows-defender-issue2.jpg" class="centered" style="max-width: 920px">
+    <img src="files/installation_3ds_max/installer-max-starting.jpg" class="centered" style="max-width: 500px">
 
     <p>
     Choose an installation folder that have enough permissions for reading and writing (or better leave it by default). Installing in a system directory such as "Program Files" or "Desktop" is not recommended.
@@ -80,7 +68,7 @@
     As of version 2.15, you may also launch the App Manager without running 3ds Max by clicking on the desktop icon or using the Start menu.
     </p>
 
-    <img src="files/installation_3ds_max/app-manager-desktop-launcher.jpg" class="centered" style="max-width: 1000px">
+    <img src="files/installation_3ds_max/app-manager-desktop-launcher.jpg" class="centered">
 
 
 
@@ -138,7 +126,10 @@
 
     <h2>Troubleshooting</h2>
 
-    <h3>Still no Verge3D menu</h3>
+
+    [anchor:no_verge3d_menu]
+
+    <h3>Still no Verge3D Menu</h3>
 
     <p>
     In some rare cases, the Verge3D menu may not show up in the main menu bar even if you configured the plugin path and re-opened 3ds Max. To register the menu manually, go to *Utilities*, click *MaxScript* and select *Verge3D* in the dropdown menu. Then click *Register Verge3D menu*.
@@ -146,7 +137,9 @@
 
     <img src="files/installation_3ds_max/installation_3ds_max-registering_manually.jpg" class="centered" style="max-width: 1000px">
 
-    <h3>Verge3D properties on objects are missing</h3>
+    [anchor:verge3d_props_missing]
+
+    <h3>Verge3D Properties on Objects are Missing</h3>
 
     <p>
     Custom Verge3D-specific properties are added automatically to objects upon their creation if <strong>Verge3D > Auto-Assign Verge3D Params</strong> is enabled. Verge3D params are not created though in the cases when you import a scene, open a file which was created before Verge3D was installed, or if the above-mentioned option is switched off.
@@ -158,37 +151,64 @@
     Either way, you can add Verge3D settings to existing objects manually, by going to the *Utilities* tab, selecting *Verge3D* under *MAXScript* and clicking *Add Verge3D Params* for selected objects.
     </p>
 
+    [anchor:python3_conflict]
+
+    <h3>Module use of python37.dll conflicts with this version of Python</h3>
+
+    <p>
+      If you see this error in 3ds Max 2021+ (upon startup or when trying to export something)...
+    </p>
+
+    <img src="files/installation_3ds_max/python3-conflict.jpg" class="centered" style="max-width: 267px">
+
+    <p>
+      ...then it's possible that some plugin cluttered with your system environment variables (forcing 3ds Max to use an outdated version of Python).
+    </p>
+
+    <p>
+      To fix it, run System Properties, by searching for <em>"edit the system environment variables"</em> and clicking on the appeared application:
+    </p>
+
+    <img src="files/installation_3ds_max/win-environment-search-app.jpg" class="centered" style="max-width: 785px">
+
+    <p>
+      In the *System Properties* dialog click on the <strong>Environment Variables...</strong> button:
+    </p>
+
+    <img src="files/installation_3ds_max/win-system-properties.jpg" class="centered" style="max-width: 425px">
+
+    <p>
+      In the next dialog find the *ADSK_3DSMAX_PYTHON_VERSION* variable. It might be located in the *User variables* or *System variables* list.
+    </p>
+
+    <img src="files/installation_3ds_max/win-environment-vars.jpg" class="centered" style="max-width: 574px">
+
+    <p>
+      Replace value *2* to *3* by clicking the <strong>Edit...</strong> button. Click *OK* then restart your system.
+    </p>
+
 
     [anchor:Uninstalling]
 
     <h2>Uninstalling</h2>
 
     <p>
-    Run 3ds Max, and select "Configure System Paths..." under "Customize" in the main menu bar.
+      In order to remove Verge3D files, as well as the desktop icon and the Start menu entry, from your computer, you may use the standard *Add or remove programs* function of Windows. It won't touch the *applications* and *puzzles* folders where user files are stored, so you may remove them manually if you don't need them anymore.
     </p>
 
-    <img src="files/installation_3ds_max/installation_3ds_max1.png" class="centered" style="max-width: 1000px">
+    <img src="files/installation_3ds_max/uninstalling-max.jpg" class="centered" style="max-width: 802px">
 
     <p>
-    Remove the path to the installation directory from the "Configure System Paths..." window.
+      Before you uninstall Verge3D, you might need to remove custom Verge3D options assigned to your objects. To do so, go to *Utilities*, click *MaxScript* and select *Verge3D* in the dropdown menu. Then click on the *Cleanup Scene* button.
     </p>
 
-    <p>
-    If you also need to remove custom Verge3D options assigned to your objects, go to *Utilities*, click *MaxScript* and select *Verge3D* in the dropdown menu. Then select all objects on your scene and click *Remove Verge3D params*.
-    </p>
-
-    <p>
-    In order to remove Verge3D files, as well as the desktop icon and the Start menu entry, from your computer, you may use the standard *Add or remove programs* function of Windows. It won't touch the *applications* and *puzzles* folders where user files are stored, so you may remove them manually if you don't need them anymore.
-    </p>
-
-    <img src="files/installation_3ds_max/uninstalling-max.jpg" class="centered" style="max-width: 824px">
-
+    <img src="files/installation_3ds_max/cleanup-scene.jpg" class="centered" style="max-width: 355px">
 
 
     <h2>What's Next</h2>
 
     <p>
-    Familiarize yourself with the <a href="manual/ru/max/Beginners-Guide.html">basics</a>!
+      Familiarize yourself with the <a href="manual/ru/max/Beginners-Guide.html">basics</a>!
     </p>
 
 
