--- a/manual/ru/maya/Lighting-and-Rendering.html
+++ b/manual/ru/maya/Lighting-and-Rendering.html
@@ -77,9 +77,144 @@
       <li>*Directional Lights* - *Color* and *Intensity* attributes are supported in Verge3D.</li>
       <li>*Point Lights* - *Color*, *Intensity* and *Decay Rate* attributes are supported in Verge3D.</li>
       <li>*Spot Lights* - *Color*, *Intensity*, *Decay Rate*, *Cone Angle* and *Penumbra Angle* attributes are supported in Verge3D.</li>
+      <li>*Area Lights* — *Color*, *Intensity* attributes are supported in Verge3D. Light transform scaling controls the emissive area.</li>
     </ul>
 
-    <p>In addition, you can assign Depth Map Shadow Attributes on Directional, Point and Spot lights. See <a href="manual/ru/maya/Shadows.html">here</a> for more info.
+    <p>
+      In addition, you can assign Depth Map Shadow Attributes on Directional, Point and Spot lights. See <a href="manual/ru/maya/Shadows.html">here</a> for more info.
+    </p>
+
+
+    [anchor:light_probes]
+
+    <h2>Light Probes</h2>
+
+    <p>
+      Verge3D add-on adds a custom light probe object called *v3dReflectionCubemap*,
+      which can be used to apply indirect lighting to objects via a local
+      reflection cubemap.<br/><br/>
+
+      The new light probe object can be found inside the custom *Verge3D* shelf:
+    </p>
+
+    <img src="files/lighting-maya/light-probe-reflection-cubemap-create.png" class="centered" style="max-width: 500px">
+
+    <p>
+      This object defines a volume of influence represented by a box or a sphere.
+      All objects contained inside that volume will use a local reflection
+      cubemap generated in runtime instead of the scene's global environment
+      texture/color.<br/><br/>
+
+      The advantage of using a local reflection map is that it has surrounding
+      objects baked in it, while the scene's global map only contains the
+      background texture/color that can be specified via Arnold's
+      <a href="manual/ru/maya/Lighting-and-Rendering.html#environment_lighting">aiSkyDomeLight</a>
+      object. Local reflection maps also have a parallax effect depending on the
+      geometry of the <a href="manual/ru/maya/Lighting-and-Rendering.html#influence_volume">influence</a>
+      or <a href="manual/ru/maya/Lighting-and-Rendering.html#parallax_volume">parallax</a>
+      volume.
+    </p>
+
+    <img src="files/lighting-maya/light-probe-reflection-cubemap-effect.png" class="centered" style="max-width: 1005px">
+    <span class="img-caption">
+      Left - reflection cubemap object in Maya viewport, right - effect it adds
+      to a reflective material in Verge3D.
+    </span>
+
+    <p>
+      v3dReflectionCubemap objects have the following parameters:
+    </p>
+
+    <img src="files/lighting-maya/light-probe-reflection-cubemap-params.png" class="centered" style="max-width: 481px">
+
+    <dl>
+      <dt>General Settings</dt>
+      <dd>
+        general light probe settings:
+
+        <dl>
+          <dt id="influence_volume">Influence Type</dt>
+          <dd>
+            type of the influence volume: *Sphere* or *Box*. Only objects
+            located inside this volume are affected by the probe's lighting.
+            Default is *Sphere*.
+          </dd>
+
+          <dt>Influence Distance</dt>
+          <dd>
+            the size of the influence volume. You can also change object scaling
+            and make the shape of the influence volume non-uniform. Default is
+            1.0.
+          </dd>
+
+          <dt>Intensity</dt>
+          <dd>
+            the intensity of the indirect lighting. Any value different from 1.0
+            is not physically correct. Default is 1.0.
+          </dd>
+
+          <dt>Clipping Start</dt>
+          <dd>
+            near clip distance. Objects located closer than this value won't be
+            rendered into the reflection cubemap. Default is 0.1.
+          </dd>
+
+          <dt>Clipping End</dt>
+          <dd>
+            far clip distance. Objects located further than this value won't be
+            rendered into the reflection cubemap. Default is 100.0.
+          </dd>
+        </dl>
+      </dd>
+
+      <dt>Visibility Selection Set</dt>
+      <dd>
+        object visibility settings:
+
+        <dl>
+          <dt>Selection Set</dt>
+          <dd>
+            limit objects that should appear on the reflection cubemap to those
+            belonging to this selection set. Choose the empty string option in
+            order to not specify any set of objects - that way all scene objects
+            will be used for generating the reflection cubemap. Default is empty
+            string.
+          </dd>
+
+          <dt>Invert Visibility</dt>
+          <dd>
+            invert the selection of objects visible to this light probe if
+            *Selection Set* is specified. Disabled by default.
+          </dd>
+        </dl>
+      </dd>
+
+      <dt id="parallax_volume">Custom Parallax</dt>
+      <dd>
+        parallax settings:
+
+        <dl>
+          <dt>Use Custom Parallax</dt>
+          <dd>
+            enable custom settings for the parallax correction. This group of
+            settings defines a parallax volume, which is used to project the
+            lighting captured by the probe. If *Custom Parallax* is not enabled
+            the parallax effect is calculated based on *Influence Type* and
+            *Influence Distance*. Disabled by default.
+          </dd>
+
+          <dt>Parallax Type</dt>
+          <dd>
+            type of the parallax volume: *Sphere* or *Box*. Default is *Sphere*
+          </dd>
+
+          <dt>Parallax Distance</dt>
+          <dd>
+            the size of the parallax volume. Default is 1.0.
+          </dd>
+        </dl>
+      </dd>
+    </dl>
 
 
     [anchor:background]
@@ -118,6 +253,7 @@
       <li>*MSAA 8x* - prefer multisample anti-aliasing with 8x samples if the target hardware supports it.</li>
       <li>*MSAA 16x* - prefer multisample anti-aliasing with 16x samples if the target hardware supports it.</li>
       <li>*FXAA* - force FXAA.</li>
+      <li>*None* - disable anti-aliasing.</li>
     </ul>
 
     <p>*Use HDR Rendering* - enable high-dynamic-range rendering.</p>
@@ -189,6 +325,63 @@
     <p>
       *Frustum Culling* - enables/disables frustum culling optimization for the object. Uncheck this option if you have some skinned object which can move beyond the screen space to prevent it from being culled.
     </p>
+
+
+    [anchor:clipping_planes]
+
+    <h2>Clipping Planes</h2>
+
+    <p>
+      Clipping planes (aka section planes, cross-section planes, mesh sections) is a technique used to show internal arrangement of complex objects, such as buildings, cars, appliances, gadgets, machines etc.
+    </p>
+
+    <img src="files/lighting-maya/clipping-plane-example.jpg" class="centered">
+
+    <p>
+      To add a new clipping plane, use the <strong>Verge3D -> Add a v3dClippingPlane object</strong> button located on the Maya tool shelf:
+    </p>
+
+    <img src="files/lighting-maya/clipping-plane-new.jpg" class="centered">
+
+    <p>
+      The objects on your scene will be clipped in the negative *Y* direction of the clipping plane object.
+    </p>
+
+    <p>
+      Clipping planes have the following parameters:
+    </p>
+
+    <dl>
+      <dt>Affected Objects</dt>
+      <dd>
+        Set of the objects clipped by the plane. If empty, all scene objects will be clipped.
+      </dd>
+      <dt>Negated</dt>
+      <dd>
+        Swap clipped and unclipped sides.
+      </dd>
+      <dt>Clip Shadows</dt>
+      <dd>
+        Clip shadows cast from the clipped objects.
+      </dd>
+      <dt>Union Planes</dt>
+      <dd>
+        Construct a union from all the clipping planes, affecting the object, not their intersection.
+      </dd>
+      <dt>Cross-Section</dt>
+      <dd>
+        Fill cross-section between the clipping plane and the affected objects.
+      </dd>
+      <dt>Cross-Section Color</dt>
+      <dd>
+        Cross-section diffuse color and opacity.
+      </dd>
+      <dt>Cross-Section Size</dt>
+      <dd>
+        Cross-section plane size. Increase this value if you use larger scene size.
+      </dd>
+    </dl>
+
 
     <h2>Got Questions?</h2>
 
