--- a/manual/ru/puzzles/Camera.html
+++ b/manual/ru/puzzles/Camera.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <title>Camera Verge3D Puzzles Reference - Soft8Soft</title>
+    <title>Cameras/Lights Verge3D Puzzles Reference - Soft8Soft</title>
     <meta charset="utf-8">
-    <meta name="description" content="How to control cameras in Verge3D Puzzles."/>
+    <meta name="description" content="How to control cameras and lights in Verge3D Puzzles."/>
     <base href="../../../" />
     <script src="page.js"></script>
     <link type="text/css" rel="stylesheet" href="page.css" />
   </head>
   <body><article>
 
-    <h1>Camera Puzzles</h1>
+    <h1>Camera and Light Puzzles</h1>
 
     <p>
-    The puzzles from this category perform operations with the camera.
+      The puzzles from this category perform operations with cameras or light sources.
     </p>
 
     <img src="files/puzzles/puzzles-camera.jpg">
@@ -26,7 +26,7 @@
 
     [anchor:puzzles_reference]
 
-    <h2>Puzzles Reference</h2>
+    <h2>Camera Puzzles Reference</h2>
 
 
     [anchor:look_at]
@@ -152,6 +152,45 @@
     <p>
     In order to setup such behavior in 3ds Max, make your object follow a dummy object by utilizing the *Rotation Controllers / LookAt Constraint*. In Blender, this corresponds to the *TrackTo* constraint.
     </p>
+
+
+    [anchor:light_puzzles_reference]
+
+    <h2>Light Puzzles Reference</h2>
+
+
+    [anchor:set_light_param]
+
+    <h3>set light param</h3>
+
+    <p>Set light parameter:</p>
+
+    <dl>
+      <dt>color (vector)<dt>
+      <dd>Set light color using vector, where X, Y, Z represent R, G, or B color component accordingly. For example <strong>[0, 1, 0]</strong> vector represent pure green color.</dd>
+
+      <dt>color (css/rgb)<dt>
+      <dd>Set light color using CSS style string such as <strong>rgb(255, 0, 0)</strong> or *magenta*.</dd>
+
+      <dt>color (css/hex)<dt>
+      <dd>Set light color using CSS hex string such as <strong>#FF0000</strong>.</dd>
+
+      <dt>intensity<dt>
+      <dd>Set light intensity.</dd>
+    </dl>
+
+    <p>This puzzle also works for a list of objects, a group (or a list of groups) or with the <a href="manual/ru/puzzles/Selectors.html#all_objects">all objects</a> puzzle.</p>
+
+    <img src="files/puzzles/puzzles-object-set-light-param.jpg">
+
+
+    [anchor:get_light_param]
+
+    <h3>get light param</h3>
+
+    <p>Get light parameter. See description on <a href="manual/ru/puzzles/Objects.html#set_light_param">set light param</a> puzzle for the list of parameters.</p>
+
+    <img src="files/puzzles/puzzles-object-get-light-param.jpg">
 
 
     <h2>Having Troubles with Puzzles?</h2>
